--- a/MvcProjeKamp/Views/AdminCategory/Index.cshtml
+++ b/MvcProjeKamp/Views/AdminCategory/Index.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-
+<h2>KAtegoriler</h2>
 <br />
 <table class="table table-hover">
     <tr>
